# playwright-skill

./: .gitignore  API_REFERENCE.md  CLAUDE.md  CLAUDE_CUSTOM_COMMANDS.md  CLAUDE_INTEGRATION.md  CONTRIBUTING.md  LICENSE  README.md  package.json  release-please-config.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/workflows/: claude-code-review.yml  claude.yml  release.yml  version-check.yml
lib/: helpers.js
scripts/: bump-version.sh  pre-commit-version-check.sh  setup-session.sh
skills/playwright-e2e/: SKILL.md
skills/playwright-py-skill/: API_REFERENCE.md  SKILL.md  run.py
skills/playwright-py-skill/lib/: helpers.py
skills/playwright-skill/: API_REFERENCE.md  SKILL.md  package.json  pyproject.toml  run.js  run.py  test.aptitude.yml
skills/playwright-skill-tester/: SKILL.md  TEST_REPORT.md  USAGE.md
skills/playwright-skill-tester/references/: test_matrix.md  test_suites.md  troubleshooting.md
skills/playwright-skill-tester/scripts/: detect_test_target.js  generate_test_report.js  setup_dependencies.js  test_commands.js  test_installation_methods.sh  test_path_resolution.js
skills/playwright-skill-tester/scripts/shared/: utils.js
skills/playwright-skill/lib/: __init__.py  helpers.js  helpers.py  proxy_wrapper.py  utils.js
skills/playwright-test/: API_REFERENCE.md  SKILL.md
